--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
+    {% comment %} <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
     <script>
     var vconsole = new VConsole();
-    </script>
+    </script> {% endcomment %}
     <!-- built files will be auto injected -->
   </body>
 </html>
