--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= VUE_APP_MARK %></title>
   </head>
-  <body class="ios-touch">
+  <body>
     <noscript>
       <strong>We're sorry but <%= VUE_APP_MARK %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
