feat: 下载页优化

--- a/public/download/index.html
+++ b/public/download/index.html
@@ -7,7 +7,11 @@
     <script src="./js/swiper.min.js"></script>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/swiper.min.css">
-    <title>BagPay 下载</title>
+    <title>Bag Pay 下载</title>
+    
+    <script src="https://lib.baomitu.com/vue/2.6.11/vue.js"></script>
+    <script src="https://lib.baomitu.com/axios/0.21.0/axios.min.js"></script>
+    <script src="./js/lang.js"></script>
 </head>
 <body class="body_container">
     <div id="app">
@@ -20,18 +24,18 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="./img/swi1.jpg" alt="" class="swi_img">
-                        <div class="blue_title">多币种钱包</div>
-                        <p>支持多种主流币种 跨链交易 方便高效</p>
+                        <div class="blue_title">{{langMessage[lang].title1}}</div>
+                        <p>{{langMessage[lang].tip1}}</p>
                     </div>
                     <div class="swiper-slide">
                         <img src="./img/swi2.jpg" alt="" class="swi_img">
-                        <div class="blue_title">多重保障 更加安全</div>
-                        <p>私钥多重保护 账户安全无需担心</p>
+                        <div class="blue_title">{{langMessage[lang].title2}}</div>
+                        <p>{{langMessage[lang].tip2}}</p>
                     </div>
                     <div class="swiper-slide">
                         <img src="./img/swi3.jpg" alt="" class="swi_img">
-                        <div class="blue_title">欢迎来到Bag Pay</div>
-                        <p>安全放心 方便快捷</p>
+                        <div class="blue_title">{{langMessage[lang].title3}}</div>
+                        <p>{{langMessage[lang].tip3}}</p>
                     </div>
                 </div>
                 <!-- 分页器 -->
@@ -40,20 +44,17 @@
 
             <div class="btn_box">
                 <div id="android_download" class = "android_btn android_img" @click.stop="androidDown">
-                    <span >Android 下载</span>
+                    <span >Android {{langMessage[lang].download}}</span>
                     <img v-show="loading1" class="loading" src="./img/loading.gif">
                 </div>
                 <div id="ios_download" class = "ios_btn ios_img" @click.stop="iosDown">
-                    <span  style="color:white">IOS 下载</span>
+                    <span  style="color:white">IOS {{langMessage[lang].download}} </span>
                     <img v-show="loading2" class="loading" src="./img/loading.gif">
                 </div>
             </div>
         </div>
     </div>
     
-
-    <script src="https://lib.baomitu.com/vue/2.6.11/vue.js"></script>
-    <script src="https://lib.baomitu.com/axios/0.21.0/axios.min.js"></script>
     <script>
         var browser = {
             versions: function () {
@@ -74,27 +75,36 @@
             // language: (navigator.browserLanguage || navigator.language).toLowerCase()
         }
 
-        console.log(window.axios, '==');
-
-        function getUrl() {
-            /* txt
-            channel: [string] 渠道 ios,android
-            version: [string] 版本
-            build: [string] 构建号 */
-            return axios.get('https://api.bagpay.io/app/version/check?channel='+'ios').then(function(res) {
-                return res;
-            })
-        }
-
-        getUrl();
-
         new Vue({
             el:"#app",
             data: {
                 title: 'Bag Pay 下载',
                 loading1: false,
                 loading2: false,
-                type: 'Android IOS'
+                type: 'Android IOS',
+                langMessage: langMessage,
+                lang: 'en-us'
+            },
+            created() {
+                var language = navigator.language.toLowerCase();
+                var getQueryUrl = (query) => {
+                    var querys = `${query}`.split('&');
+                    var res = {};
+                    querys.forEach(function(item) {
+                        var values = item.split('=');
+                        res[values[0]] = values[1];
+                    });
+                    return res;
+                };
+                var query = getQueryUrl(location.search.slice(1));
+                console.log(query.lang && Object.keys(langMessage).indexOf(query.lang) !== -1)
+                if (query.lang && Object.keys(langMessage).indexOf(query.lang) !== -1) {
+                    this.lang = query.lang;
+                } else if (language.indexOf('zh') !== -1) {
+                    this.lang = 'zh-CN';
+                } else {
+                    this.lang = 'en-us';
+                }
             },
             mounted() {
                 this.$nextTick(() => {
