--- a/public/download/index.html
+++ b/public/download/index.html
@@ -122,7 +122,7 @@
                     this.loading1 = true;
                     this.getUrl('android').then(res => {
                         this.loading1 = false;
-                        this.downloadHandle(res.url + (new Date().getTime()));
+                        this.downloadHandle(res.url);
                     }).catch(() => {
                         this.loading1 = false;
                         this.downloadHandle('http://x100.oss-ap-southeast-1.aliyuncs.com/app/bagpay.apk');
