--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= VUE_APP_MARK %></title>
+    <script>
+      var value = '<%= NODE_ENV %>';
+      if(navigator.userAgent.indexOf("Html5Plus") < 0 && value === 'production'){//不支持5+ API  
+          location.replace(location.origin + '/download/');
+      }
+    </script>
   </head>
   <body>
     <noscript>
