--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= VUE_APP_MARK %></title>
     <script>
+      // 判断浏览器个原生APP， 浏览器自动跳转下载页
       var value = '<%= NODE_ENV %>';
       if(navigator.userAgent.indexOf("Html5Plus") < 0 && value === 'production'){//不支持5+ API  
           location.replace(location.origin + '/download/');
