--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script>
       // 判断浏览器个原生APP， 浏览器自动跳转下载页
       var value = '<%= NODE_ENV %>';
-      if(navigator.userAgent.indexOf("Html5Plus") < 0 && value === 'production'){//不支持5+ API  
+      if(navigator.userAgent.indexOf("Html5Plus") < 0 && value === 'production' && location.href.indexOf('/mine/protocol') < 0){//不支持5+ API  
           location.replace(location.origin + '/download/');
       }
     </script>
