--- a/public/register/index.html
+++ b/public/register/index.html
@@ -65,7 +65,7 @@
     </div>
     
     <script>
-        var baseUrl = 'https://bp-api.qdu.io';
+        var baseUrl = 'https://api.bagpay.io';
         var browser = {
             versions: function () {
                 var u = navigator.userAgent, app = navigator.appVersion;
